--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
     <!-- Texto central -->
     <div class="content">
       <h1 class="headline">SEJA SEU MELHOR</h1>
-      <a href="#" class="btn">ISSO É SPLASHYARD</a>
+      <a href="alunos.html" class="btn">ISSO É SPLASHYARD</a>
     </div>
   </header>
 
